Remove unused variables

--- a/WebInterface/restaurant.html
+++ b/WebInterface/restaurant.html
@@ -578,7 +578,7 @@
           success: function(result) {
             displayQueue(restaurantId);
           },
-          error: function(gameScore, error) {
+          error: function(error) {
             console.log("Destroy " + queueId + " Failed");
           }
         });
