Move unused files to legacy folder. Change frequency of refresh for Queue to be 20s, Still 5s for Requests.

--- a/WebInterface/restaurant.html
+++ b/WebInterface/restaurant.html
@@ -419,9 +419,13 @@
 
   // Automatically refreshes every 5 seconds. 
   setInterval(function(){
-    displayQueue(restaurantId);
     displayRequest(restaurantId);
-    }, 5000);
+  }, 5000);
+
+  // Refresh Queue at a slower rate
+  setInterval(function(){
+    displayQueue(restaurantId);
+  }, 20000);
 
 
   // Set table as ready in queue table. Sends nofication if ready
