--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -5,9 +5,8 @@
   <title>My Parse App</title>
   <meta name="description" content="My Parse App">
   <meta name="viewport" content="width=device-width">
-  <!--<link rel="stylesheet" href="css/reset.css">-->
-  <!--<link rel="stylesheet" href="css/styles.css">-->
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/bootstrap-theme.css">
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="http://www.parsecdn.com/js/parse-latest.js"></script>
 </head>
