Made Yes and No pretty!

--- a/WebInterface/restaurant.html
+++ b/WebInterface/restaurant.html
@@ -284,9 +284,9 @@
   function boolToString(val)
   {
     if (val)          
-      return "Yes";
+      return "<b><font color='green'>Yes</font></b>";
     else
-      return "No";
+      return "<b><font color='red'>No</font></b>";
   }
 
   // get a customerName given customerID
