Updated minute extension with minutes for push notification!

--- a/WebInterface/restaurant.html
+++ b/WebInterface/restaurant.html
@@ -680,7 +680,7 @@
             Parse.Push.send({
             where: query,
             data: {
-              alert: "Sorry, wait time extended at " + name + "."
+              alert: "Sorry, wait time extended at " + name + " to " + minRemain + " minutes."
             }
             }, {
               success: function() {},
